Add worker scripts

--- a/src/assets/css/main.postcss
+++ b/src/assets/css/main.postcss
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 :root {
-  --map-bg: #0b0d11;
+  /* Use Tailwind Theme Color */
+  --map-bg: theme('colors.void');
 }
 
 body {
